change site name

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
     <div id="container">
         <header>
-           <a href='index.html'><h1>Search <span>Vidz</span></h1></a>
-            <p>Find a Youtube video</p>
+           <a href='index.html'><h1>Definitely NOT <span>Youtube</span></h1></a>
+            <p>Search for videos</p>
         </header>
         <section>
             <form id="search-form" name="search-form" onsubmit="return search()">
